--- a/src/index.html
+++ b/src/index.html
@@ -4,10 +4,20 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Page title</title>
+    <link href="https://unpkg.com/slim-select@latest/dist/slimselect.css" rel="stylesheet"></link>
     <link rel="stylesheet" href="./style/style.css" />
     
   </head>
   <body>
+    <select id="selectElement" class="category-select">
+      <option data-placeholder="true"></option>
+      <!-- <option value="" name=""></option> -->
+      <option value="movie" name="movie">Movies</option>
+      <option value="person" name="person">People</option>
+      <option value="tv" name="tv">TV Show</option>
+    </select>
+    <ul class="container"></ul>
+    <div class="js-guard"></div>
 
     <script type="module" src="./index.js"></script>
   </body>
