--- a/src/index.html
+++ b/src/index.html
@@ -9,9 +9,12 @@
     
   </head>
   <body>
+    <div class="main-title-container">
+    <h1 class="main-title">Movies GID</h1>
+    <p>Trending movies, characters and TV shows</p>
+  </div>
     <select id="selectElement" class="category-select">
       <option data-placeholder="true"></option>
-      <!-- <option value="" name=""></option> -->
       <option value="movie" name="movie">Movies</option>
       <option value="person" name="person">People</option>
       <option value="tv" name="tv">TV Show</option>
