--- a/src/index.html
+++ b/src/index.html
@@ -12,6 +12,7 @@
     <div class="main-title-container">
     <h1 class="main-title">Movies GID</h1>
     <p>Trending movies, characters and TV shows</p>
+    <a href="./favorite.html">FAVORITE</a>
   </div>
     <select id="selectElement" class="category-select">
       <option data-placeholder="true"></option>
