--- a/src/index.html
+++ b/src/index.html
@@ -11,15 +11,10 @@
   <body>
     <div class="main-title-container">
     <h1 class="main-title">Movies GID</h1>
-    <p>Trending movies, characters and TV shows</p>
-    <a href="./favorite.html">FAVORITE</a>
+    <p>1000+ Trending movies</p>
+    <a href="./favorite.html" class="fav-link">FAVORITE</a>
   </div>
-    <select id="selectElement" class="category-select">
-      <option data-placeholder="true"></option>
-      <option value="movie" name="movie">Movies</option>
-      <option value="person" name="person">People</option>
-      <option value="tv" name="tv">TV Show</option>
-    </select>
+    
     <ul class="container"></ul>
     <div class="js-guard"></div>
     
